--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <script type="text/javascript">
         (function(){
             emailjs.init({
-                publicKey: "OX-GXUeYCZnPidZJ1",
+                publicKey: "AFJxHKEa2Jajo3FT6",
             });
         })();
     </script>
